--- a/configmap.yml
+++ b/configmap.yml
@@ -6,15 +6,15 @@ metadata:
   labels:
     app: bitwarden
 data: 
-  smtp_server: 'smtp.domain.tld'
-  smtp_from: 'user@smtp.domain.tld'
-  smtp_port: '587'
-  smtp_ssl: 'true'
-  smtp_username: 'user@smtp.domain.tld'
+  smtp-server: 'smtp.domain.tld'
+  smtp-from: 'user@smtp.domain.tld'
+  smtp-port: '587'
+  smtp-ssl: 'true'
+  smtp-username: 'user@smtp.domain.tld'
   websocket: 'true'
-  DATA_FOLDER: '/data'
-  domain_fqdn: 'https://bitwarden.domain.tld'
-  rocket_workers: '10'
-  rocket_port: '8080'
-  password_hint: 'false'
-  web_vault: 'true'
+  DATA-FOLDER: '/data'
+  domain-fqdn: 'https://bitwarden.domain.tld'
+  rocket-workers: '10'
+  rocket-port: '8080'
+  password-hint: 'false'
+  web-vault: 'true'
