--- a/rbac.yml
+++ b/rbac.yml
@@ -7,7 +7,7 @@ metadata:
     app: bitwarden
 
 ---
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: bitwarden
@@ -31,7 +31,7 @@ rules:
       - get
 
 ---
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: bitwarden
