--- a/ingress.yml
+++ b/ingress.yml
@@ -7,8 +7,9 @@ metadata:
   labels:
     app: bitwarden
   annotations:
-    # the name of the nginx-ingress-controller class
-    kubernetes.io/ingress.class: nginx-ingress-external
+    # Generate a Let's Encrypt SSL certificate through cert-manager (use letsencrypt-staging if you're testing it or letsencrypt-prod for production)
+    cert-manager.io/issuer: letsencrypt-staging
+    certmanager.k8s.io/acme-challenge-type: dns01
     nginx.ingress.kubernetes.io/configuration-snippet: |
       more_set_headers "Request-Id: $req_id";
     nginx.ingress.kubernetes.io/connection-proxy-header: "keep-alive"
@@ -24,9 +25,7 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-connect-timeout: "10"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
-    # Generate a Let's Encrypt SSL certificate through cert-manager (use letsencrypt-staging if you're testing it)
-    kubernetes.io/tls-acme: "true"
-    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
+
 spec:
   tls:
   - hosts:
