--- a/.github/workflows/test-deployment.yml
+++ b/.github/workflows/test-deployment.yml
@@ -33,8 +33,8 @@ jobs:
         run: kubectl get pods -A
       - name: Deploying app
         run: |
-          echo "Filling manifest variable"
-          sed -i 's/<BASE64_ENCODED_PASSWORD>/aGV5dGhpc2lzYXRlc3Q=/g' smtp-secret.yaml
+          echo "Filling manifest variables"
+          sed -i 's/<BASE64_ENCODED_PASSWORD>/aGV5dGhpc2lzYXRlc3Q=/g' smtp-secret.yml
           echo "Creating bitwarden namespace..."
           kubectl create ns bitwarden
           echo "Applying bitwarden manifests..."
