--- a/.github/workflows/test-deployment.yml
+++ b/.github/workflows/test-deployment.yml
@@ -41,18 +41,39 @@ jobs:
         run: |
           echo "Filling manifest variables"
           sed -i 's/<BASE64_ENCODED_PASSWORD>/aGV5dGhpc2lzYXRlc3Q=/g' smtp-secret.yml
+          ip -4 a sh eth0 | grep inet | awk '{print $2}' | awk -F'/16' '{print $1}' > HOST_IP
+          cat HOST_IP
+          sed -i 's/bitwarden.domain.tld/bitwarden.'$(cat HOST_IP)'.xip.io/g' ingress.yml
+          sed -i 's/bitwarden.domain.tld/bitwarden.'$(cat HOST_IP)'.xip.io/g' configmap.yml
           echo "Creating bitwarden namespace..."
           kubectl create ns bitwarden
           echo "Applying bitwarden manifests..."
           kubectl apply -n bitwarden -f .
-      - name: List minikube service List
+      - name: Check bitwarden rollout status
         run: |
-          minikube service list
-      - name: Get ingress List
+          kubectl rollout status sts/bitwarden -n bitwarden
+          sleep 120
+      - name: Test bitwarden availability with curl via FQDN
         run: |
-          kubectl get ingress -n bitwarden
-          echo "------------- Test bitwarden availability with curl -------------"
-          curl -vkL bitwarden.domain.tld
+          echo "------------- curl bitwarden via FQDN -------------"
+          curl -kL https://bitwarden.$(cat HOST_IP).xip.io
+          echo "------------- check status code -------------"
+          curl -I https://www.google.com | grep "HTTP" | awk '{print $2}' > STATUS_CODE
+          if [[ $(cat STATUS_CODE) -eq 200 ]]
+          then
+            exit 0
+          else
+            echo "Error, status code: " $(cat STATUS_CODE)
+            exit 1
+          fi
+
+
+#          kubectl logs `kubectl get pods -n kube-system | grep -v NAME | grep ingress-nginx-controller | awk '{print $1}'` -n kube-system
+#          kubectl describe pod bitwarden-0 -n bitwarden
+
+#          kubectl get svc -n bitwarden bitwarden -o jsonpath='{.spec.clusterIP}' | xargs -I {} curl -vkL https://{}
+#          echo "------------- Test bitwarden availability with FQQN -------------"
+#          cat ingress.yml|grep "host:" | awk '{print $3}' | xargs curl -vkL 
 
 #  k8s18:
 #    name: Deploy bitwarden_rs on Minikube (k8s v1.18.2)
