--- a/statefulset.yml
+++ b/statefulset.yml
@@ -115,4 +115,4 @@ spec:
       resources:
         requests:
           storage: "15Gi"
-      storageClassName: default
+#      storageClassName: default
