--- a/backwards/ingress-backwards.yml
+++ b/backwards/ingress-backwards.yml
@@ -1,6 +1,6 @@
 ---
-# Kubernetes v1.19
-apiVersion: networking.k8s.io/v1
+# Kubernetes prior v1.19 (from v1.14 to v1.18)
+apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: bitwarden-ingress
@@ -35,16 +35,10 @@ spec:
     http:
       paths:
       - path: /
-        pathType: Prefix
         backend:
-          service:
-            name: bitwarden
-            port:
-              number: 80
+          serviceName: bitwarden
+          servicePort: 80
       - path: /notifications/hub
-        pathType: Prefix
         backend:
-          service:
-            name: bitwarden
-            port:
-              number: 3012
+          serviceName: bitwarden
+          servicePort: 3012
